# rust-cpp-experiments

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml
cmake-utils/: CMakePresets.json
rust-postgres/: .env  CMakeLists.txt  CMakePresets.json  README.md
rust-postgres/cpp_exe/: main.cpp
rust-postgres/rust_exe/: Cargo.toml
rust-postgres/rust_exe/src/: main.rs
rust-postgres/sqlx_lib/: Cargo.toml
rust-postgres/sqlx_lib/migrations/: 20240928140725_table.sql
rust-postgres/sqlx_lib/src/: lib.rs
